rust/crates/turbotokens-adapter-all/src/snapshots/turbotokens_adapter_all__tests__zcode_fixture_daily_table.snap
---
source: crates/turbotokens-adapter-all/src/tests.rs
expression: "serde_json::to_string_pretty(&table_snapshot(&daily.rows,\nAgentReportKind::Daily, &daily.detected_agents,)).unwrap()"
---
{
  "headers": [
    "Date",
    "Agent",
    "Models",
    "Input",
    "Output",
    "Cache Create",
    "Cache Read",
    "Total Tokens",
    "Cost (USD)"
  ],
  "rows": [
    {
      "cells": [
        "2099-01-02",
        "All",
        "",
        "60",
        "10",
        "15",
        "25",
        "110",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- ZCode",
        "- GLM-5.2",
        "60",
        "10",
        "15",
        "25",
        "110",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "2099-01-15",
        "All",
        "",
        "130",
        "20",
        "30",
        "40",
        "220",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- ZCode",
        "- GLM-5.3",
        "130",
        "20",
        "30",
        "40",
        "220",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "2099-02-01",
        "All",
        "",
        "40",
        "5",
        "0",
        "10",
        "55",
        "$0.00"
      ],
      "kind": "row"
    },
    {
      "cells": [
        "",
        "- ZCode",
        "- GLM-5.3",
        "40",
        "5",
        "0",
        "10",
        "55",
        "$0.00"
      ],
      "kind": "agent-breakdown"
    },
    {
      "cells": [
        "Total",
        "",
        "",
        "230",
        "35",
        "45",
        "75",
        "385",
        "$0.00"
      ],
      "kind": "total"
    }
  ],
  "title": "Coding (Agent) CLI Usage Report - Daily\nDetected: ZCode"
}
